--- a/projectpkm/web/index.html
+++ b/projectpkm/web/index.html
@@ -97,5 +97,24 @@
       loadMainDartJs();
     }
   </script>
+   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+
+   <!-- Firebase Configuration -->
+   <script>
+     var firebaseConfig = {
+        apiKey: "AIzaSyDYX5ATaP7NBGBk2VDkjatA2wOkvPknBWM",
+        authDomain: "si-kia-pkm-sb.firebaseapp.com",
+        projectId: "si-kia-pkm-sb",
+        storageBucket: "si-kia-pkm-sb.appspot.com",
+        messagingSenderId: "297731959736",
+        appId: "1:297731959736:web:edaa55fe03d28f36e3fd4d",
+        measurementId: "G-LR6F3T9BH2"
+     };
+
+     // Initialize Firebase
+     firebase.initializeApp(firebaseConfig);
+   </script>
+
+   <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
